2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts-gmconf.cpp: Half-fixed bug #328528.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/chat.cpp: "Clear Call" -> "Hang up"

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp, src/gui/statusicon.cpp: Renaming of
	Connect/Disconnect to Call/Hang up. Patch with the help of CJ van den
	Berg.

2006-01-26  Julien Puydt  <jpuydt@free.fr>

	* src/gui/druid.cpp: Added get_filtered_video_devices_char_array to
	remove StaticPicture as a choice in the druid. Fixes #328326.

2006-01-25  Julien Puydt  <jpuydt@free.fr>

	* lib/toolbox/toolbox-gtk.c: Fixed #328468.

2006-01-25  Julien Puydt  <jpuydt@free.fr>

	* src/gui/druid.cpp: Made the message stating ALSA is the best choice
	appear as WindowsMultimedia when on win32. Thanks to Luis Menina to
	point this inconsistency.

2006-01-24  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/accountshandler.cpp src/gui/statusicon.cpp 
	src/gui/statusicon.h:
	Do the same with status icon.

2006-01-24  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-avahi.cpp:
	Make sure strcmp is not called with a NULL argument.

	* src/endpoints/accountshandler.cpp src/gui/main.cpp 
	src/gui/main.h:
	Sometimes, registering an account can take long due to the STUN being 
	used.
	Gives a visual feedback in the *main* GUI when an account is registered.

2006-01-24  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Patch from Jan Schampera, to add some #ifdef
	HAS_SDL which were missing from yesterday's work. Thanks !

2006-01-24  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callshistory.h, src/gui/callshistory.cpp: Added the
	possibility to search history in reverse order (patch from Jan
	Schampera)
	* src/gui/main.cpp, src/gui/chat.cpp: Made use of the new feature
	(same patch from Jan Schampera)

2006-01-24  Julien Puydt  <jpuydt@free.fr>

	* lib/gmconf/gmconf-glib.c: Fixed the list_from_string function, which