@@ -1,5 +1,12 @@
 2006-01-26  Julien Puydt  <jpuydt@free.fr>
 
+	* lib/toolbox/toolbox.h, lib/toolbox/toolbox-common.c,
+	lib/toolbox/Makefile.am, lib/gmconf/gmconf-glib.c,
+	lib/gmconf/Makefile.am: Applied patch from Jan Schampera to correctly
+	create the personal configuration directory when it doesn't exist.
+
+2006-01-26  Julien Puydt  <jpuydt@free.fr>
+
 	* lib/gmcontacts/gmcontacts-gmconf.cpp: Half-fixed bug #328528.
 
 2006-01-26  Julien Puydt  <jpuydt@free.fr>
